force-app/main/default/objects/Error_Logged__e/Error_Logged__e.object-meta.xml
<CustomObject>
    <description>Platform Event published whenever an error is captured. A trigger subscribes and writes Error_Log__c records.</description>
    <label>Error Logged</label>
    <pluralLabel>Error Logged</pluralLabel>
</CustomObject>