force-app/main/default/objects/Error_Logged__e/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>