force-app/main/default/objects/Error_Logged__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>